# engine-map-pinn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/tracks/: nordschleife.json  silverstone.json  spa.json
docs/: engine_map.md
scripts/: make_3d.py  make_aero.py  make_control.py  make_crossover.py  make_figures.py  make_laps.py  make_raceline.py  make_tire_calibration.py  optimize_gearing.py
src/enginemap/: __init__.py  controller.py  dataset.py  dynamics.py  engine.py  lapsim.py  mpcc.py  pinn.py  raceline.py  telemetry.py  tire_id.py  track.py  vehicle.py
tests/: test_control.py  test_engine.py  test_lapsim.py  test_tire.py
